# SpaRRTa

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train.py
configs/: attention.yaml  train.yaml
configs/backbone/: clip_b16_laion.yaml  croco_b16.yaml  crocov2_b16.yaml  deit3_b16.yaml  dino_b16.yaml  dinov2_b14.yaml  dinov2_b14_reg.yaml  dinov2_l14_reg.yaml  dinov3_b16.yaml  dinov3_timm.yaml  mae_b16.yaml  maskfeat_vitb16.yaml  spa_b16.yaml  spa_l16.yaml  vggt_l16.yaml
configs/dataset/: lego_position.yaml  unreal_lego_holdout_transfer.yaml  unreal_position.yaml  unreal_position_transfer.yaml
configs/optimizer/: custom_epoch.yaml  fifteen_epoch.yaml  one_epoch.yaml  three_epoch.yaml  twenty_epoch.yaml
configs/probe/: classifier.yaml
notebook/: README.md  position_probe_inspection.ipynb
notebook/examples/: params_0015.json  params_0016.json  params_0017.json  params_0021.json
notebook/heads/: head_vggt_l16_cls_efficient_winter_town_2_camera_Snowman_Husky.pt
scripts/: count_position_probe_params.py  position_config.yaml  run_lego_rebuttal.py  run_loto_fewshot.py  run_sweep.py  run_sweep_simple.py  summarize_lego_rebuttal.py  summarize_loto_fewshot.py  upload_attention_to_hf.py
scripts/slurm/: zrun_lego_rebuttal.sh  zrun_loto_fewshot.sh  zrun_train_position.sh
sparrta/analysis/: aggregate_attention.py  attention_rollout.py  compute_attention.py  perspective_divergence.py  plot_attention.py  visualize_patch_masks.py
sparrta/datasets/: lego_position.py  unreal_lego_holdout_transfer.py  unreal_position.py  unreal_position_transfer.py
(+15 files in other folders)
