[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparrta"
version = "0.1.0"
description = "SpaRRTa: A Synthetic Benchmark for Evaluating Spatial Intelligence in Visual Foundation Models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Turhan Can Kargın" },
    { name = "Wojciech Jasiński" },
    { name = "Adam Pardyl" },
    { name = "Bartosz Zieliński" },
    { name = "Marcin Przewięźlikowski" },
]
keywords = ["spatial-reasoning", "vision-foundation-models", "probing", "benchmark", "self-supervised-learning"]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "timm>=1.0.0",
    "transformers>=4.29",
    "open_clip_torch>=2.23.0",
    "einops>=0.7.0",
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "opencv-python>=4.5",
    "pillow>=9.0",
    "matplotlib>=3.5",
    "loguru>=0.6",
    "tqdm>=4.50",
    "gdown",
    "wget",
]

[project.optional-dependencies]
wandb = ["wandb"]

[project.urls]
Paper = "https://arxiv.org/abs/2601.11729"
Dataset = "https://huggingface.co/datasets/turhancan97/SpaRRTa"

[tool.setuptools.packages.find]
include = ["sparrta*"]
